--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 # SITE SETTINGS
 #
 # title appears in the header
-title: Introduction to Zotero
+title: CALS Liaison Presentation
 # title-icon appears in the header to give some pizazz (leave blank for none)
 # choose from Bootstrap Icons in _includes/bootstrap-icons
 # find names on https://icons.getbootstrap.com/
@@ -18,11 +18,11 @@ title: Introduction to Zotero
 title-icon: 
 # description, keywords, and image for meta tags
 # these do not visibility appear on the pages, but used for SEO
-description: "A guide for using Zotero to organize scholarly materials, create bibliographies, summarize annotations, collaborate on group projects and preserve your research for future reference."
+description: "Spring 2025 College of Agriculture and Life Science Presentation for Library Liaison Committee"
 keywords: 
 # featured-image is added to metadata tags for social media sharing
 # use a relative path to image in this repository or full URL
-featured-image: "/images/banner.gif"
+featured-image: "/images/banner.png"
 # add search box to footer? true/false
 search: true
 
@@ -33,7 +33,7 @@ github_username: aweymo-ui
 # year or date published
 pub_year: 2025
 # location of code, the full url to your github repository
-source-code: https://github.com/aweymo-ui/zotero_intro
+source-code: https://github.com/aweymo-ui/cals_liaison
 
 ##########
 # URL VARIABLES [optional!!]
@@ -47,7 +47,7 @@ url: https://aweymo-ui.github.io/
 # use baseurl to add subsection of the domain, e.g. /workshop-template-b
 # on gh-pages this is a / followed by the name of the repository
 # baseurl is your github repository's name prefixed with a /
-baseurl: /zotero_intro
+baseurl: /cals_liaison
 
 
 ##########
